src/objects/Time_Entry__c.object
<CustomObject>
    <description>Records the amount of time spent on a Project Task</description>
    <fields>
        <fullName>Client_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Client ID that the time entry is associated with</description>
        <label>Client-ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ElapsedTimerTime__c</fullName>
        <description>Elapsed minutes in current timer</description>
        <formula>(NOW()-Timer_Started_At__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ElapsedTimerTime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_With_Timer__c</fullName>
        <description>The current amount of time tracked, if timer is running</description>
        <label>Hours With Timer</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Without_Timer__c</fullName>
        <description>The current amount of time tracked, if timer is not running</description>
        <label>Hours Without Timer</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>Number of (decimal time) hours tracked in this time entry</description>
        <label>Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true if the time entry has been approved via Approval, false if un-approved</description>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Time entry notes</description>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Project ID that the time entry is associated with</description>
        <label>Project-ID</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Spent_At__c</fullName>
        <description>Date of the time entry</description>
        <label>Spent At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Task ID that the time entry is associated with</description>
        <label>Task-ID</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timer_Started_At__c</fullName>
        <description>Time (UTC) and date that timer was started (if tracking by duration)</description>
        <label>Timer Started At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User ID that tracked this time entry</description>
        <label>User-ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{00000}</displayFormat>
        <label>Time Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>